# SpheroSwarm

./: README.md  pyproject.toml
spherov2_test/: discover.py  main.py  minimal_connection.py
