[tool.poetry]
name = "spherov2-test"
version = "0.1.0"
description = ""
authors = ["Richard Beattie <richard.beattie91@gmail.com>"]
readme = "README.md"
packages = [{include = "spherov2_test"}]

[tool.poetry.dependencies]
python = "3.11.3"
bleak = "^0.20.2"
spherov2 = {path = "/home/rbeattie/Documents/spherov2.py/", develop=true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
